Fix code tag CSS to prevent wrapping.

--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ ul.posts span {
     font-size: 85%;
     padding: 0 .2em;
     margin-bottom: 1em;
+    white-space:nowrap;
 }
 
 #post pre code {
